fix: literally the final fix bro I swear
Signed-off-by: Dasun Abeykoon <Dasun20202020@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: init Java
         uses: actions/setup-java@v3
         with:
-          distribution: "temmurin"
+          distribution: "temurin"
           java-version: "17"
       - name: Grant executive perms
         run: chmod +x gradlew
