--- a/build.gradle
+++ b/build.gradle
@@ -143,7 +143,7 @@ gversion {
 }
 
 // Spotless auto format
-project.compileJava.dependsOn(spotlessCheck)
+project.compileJava.dependsOn(spotlessApply)
 spotless {
     java {
         target fileTree('.') {
