chore: update install git hooks task output
Signed-off-by: Dasun L. Abeykoon <Dasun20202020@hotmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -127,8 +127,12 @@ tasks.withType(JavaCompile) {
 
 // Configure pre-commit hooks on first build
 task installGitHooks(type: Copy) {
+    logger.info("~~~~~~~~~~~~~~~~~~~~~~~~~~~~")
+    logger.info("~~~ Installing Git Hooks ~~~")
+    logger.info("~~~~~~~~~~~~~~~~~~~~~~~~~~~~")
     from '.scripts'
     into '.git/hooks'
+    logger.info("Successfully Installed Hooks!")
 }
 
 // Generate Build Constants
